--- a/EstablecimientoPanelDeControl/Views/Establecimiento/Panel.cshtml
+++ b/EstablecimientoPanelDeControl/Views/Establecimiento/Panel.cshtml
@@ -8,11 +8,9 @@
 
 @using (Html.BeginForm("Panel", "Establecimiento", FormMethod.Post))
 {
+
     <div class="container">
         <section class="establecimiento-bg">
-            @*<div class="ibox-content">*@
-
-
             <article>
                 <div class="row">
                     <div class="jumbotron" style="text-align: center">
@@ -33,13 +31,13 @@
                     <div class="col-md-2">
                         <input type="date" id="EvolucionesDesde"
                                class="form-control"
-                               value="2019-08-26"
+                               value="2019-10-22"
                                min="2018-01-01" max="2025-01-01">
                     </div>
                     <div class="col-md-2">
                         <input type="date" id="EvolucionesHasta"
                                class="form-control"
-                               value="2019-08-26"
+                               value="2019-10-22"
                                min="2018-01-01" max="2025-01-01">
                     </div>
                 </div>
@@ -49,13 +47,13 @@
                     <div class="col-md-2">
                         <input type="date" id="PracticasDesde"
                                class="form-control"
-                               value="2019-08-26"
+                               value="2019-10-22"
                                min="2018-01-01" max="2025-01-01">
                     </div>
                     <div class="col-md-2">
                         <input type="date" id="PracticasHasta"
                                class="form-control"
-                               value="2019-08-26"
+                               value="2019-10-22"
                                min="2018-01-01" max="2025-01-01">
                     </div>
                 </div>
@@ -63,7 +61,9 @@
 
             <article>
                 <div class="row margin-top-15">
-                    <div class="col-md-2"> <input type="button" class="btn btn-default" style="width:100%" value="Problemas de Salud"> </div>
+                    <div class="col-md-2">
+                        <a id="problemaSaludButton" class="btn btn-default btn-block" value="problemaSalud">Problema de Salud</a>
+                    </div>
                     <div class="col-md-1"></div>
                 </div>
                 <div class="row margin-top-15">
@@ -77,7 +77,7 @@
                 </div>
                 <div class="row margin-top-15">
                     <div class="col-md-2">
-                        <a id="buscarPacienteButton" class="btn btn-default btn-block" onclick="miBuscarPacienteValue()" value="buscarPaciente">Buscar Paciente</a>
+                        <a id="buscarPacienteButton" class="btn btn-default btn-block" value="buscarPaciente">Buscar Paciente</a>
                     </div>
                     <div class="col-md-1">  </div>
                     <div class="col-md-2"><input id="buscarPacienteText" type="text" class="form-control" style="width:100%"></div>
@@ -102,10 +102,6 @@
                                 {
                                     <option value="@Model.sectoresListado[i].id">@Model.sectoresListado[i].nombre</option>
                                 }
-                                @*<option value="volvo">Volvo</option>
-                                    <option value="saab">Saab</option>
-                                    <option value="opel">Opel</option>
-                                    <option value="audi">Audi</option>*@
                             </select>
                         </div>
                     </div>
@@ -125,6 +121,18 @@
 
         $(document).ready(function () {
 
+            var date = new Date();
+            var dateString = date.toISOString().split('T')[0]; // "2019-10-23"
+            
+            $("#PracticasHasta").val(dateString);
+            $("#EvolucionesHasta").val(dateString);
+
+            date.setDate(date.getDate() - 30);
+            dateString = date.toISOString().split('T')[0];
+
+            $("#EvolucionesDesde").val(dateString);
+            $("#PracticasDesde").val(dateString);
+            
         });
 
         //Tiene el ID de la etiqueta #sectorSelect
@@ -139,20 +147,19 @@
         //Tiene el ID de la etiqueta #buscarPacienteButton
         var buscar_paciente_button = document.getElementById('buscarPacienteButton');
 
+        //Tiene el ID de la etiqueta #problemaSaludButton
+        var problema_salud_button = document.getElementById('problemaSaludButton');
+
 
         //Esta funcion nos devolverá a que Sector se le hizo click
         function miSectorSelectValue() {
             sector_select_value = sector_select.options[sector_select.selectedIndex].value;
         }
 
-
-        //Esto nos redirige al controlador y a su ActionResult      (se le pasa un parametro, idsector)
-        sector_button.onclick = function (e) {
-
-            var link = "/Establecimiento/AccederSector/" + "?idsector=" + sector_select_value;
-            alert(link);
-            //var sectorSeleccionado = document.getElementById("mirol").innerText;
-            sector_button.href = link;
+        //Esto nos redirige al controlador y a su ActionResult
+        problema_salud_button.onclick = function (e) {
+            var link = "/Establecimiento/ProblemaSalud/";
+            problema_salud_button.href = link;
         };
 
         //--------------------------------------------------------------------------------------------
@@ -174,12 +181,12 @@
         });
 
         function evolucionesFocusOut() {
-            var url = "@Url.Action("TotalEvolucionesRefresh","Establecimiento")";
+            var url = "@Url.Action("TotalEvolucionesRefresh","Establecimiento")"
             var fechaDesdeEvoluciones = $("#EvolucionesDesde").val();
             var fechaHastaEvoluciones = $("#EvolucionesHasta").val();
 
             var data = { fechaDesdeEvolucioness: fechaDesdeEvoluciones, fechaHastaEvolucioness: fechaHastaEvoluciones }
-            var miData;
+            var miData;            
 
             try {
                 if ($("#EvolucionesDesde").val() == "") throw "EvolucionesDesde Dato no Completado";
@@ -188,7 +195,7 @@
                 $.post(url, data).done(function (data) {
 
                     miData = data + " Evoluciones";
-                    $("#Evoluciones").html(miData);
+                    $("#Evoluciones").html(miData); 
                 }).fail(evolucionesManejoErroresAjax)
                     .always(function () {
                         //Esta funcion siempre se ejecuta
@@ -197,8 +204,6 @@
             catch (err) {
                 alert(err);
             }
-
-            
         }
 
         //Siempre que haya un error en la fecha seleccionado o envie mal un parametro tirara error en la consola
@@ -234,8 +239,6 @@
             catch (err) {
                 alert(err);
             }
-
-
         }
 
         //Siempre que haya un error en la fecha seleccionada o envie mal un parametro tirará error en la consola
@@ -255,6 +258,15 @@
             alert(link);
             //var sectorSeleccionado = document.getElementById("mirol").innerText;
             buscar_paciente_button.href = link;
+        };
+
+        //Esto nos redirige al controlador y a su ActionResult      (se le pasa un parametro, idsector)
+        sector_button.onclick = function (e) {
+
+            var link = "/Establecimiento/AccederSector/" + "?idsector=" + sector_select_value;
+            alert(link);
+            //var sectorSeleccionado = document.getElementById("mirol").innerText;
+            sector_button.href = link;
         };
 
 </script>
