Add Profesionales Merge
Primer Merge Con GitKraken

--- a/EstablecimientoPanelDeControl/Views/Establecimiento/Panel.cshtml
+++ b/EstablecimientoPanelDeControl/Views/Establecimiento/Panel.cshtml
@@ -189,7 +189,7 @@
             var miData;            
 
             try {
-                if ($("#EvolucionesDesde").val() == "") throw "EvolucionesDesde Dato no Completado";
+                if ($("#EvolucionesDesde").val() == "") throw "EvolucionesDesde   no Completado";
                 if ($("#EvolucionesHasta").val() == "") throw "EvolucionesHasta Dato no Completado";
 
                 $.post(url, data).done(function (data) {
