--- a/EstablecimientoPanelDeControl/Views/Home/Index.cshtml
+++ b/EstablecimientoPanelDeControl/Views/Home/Index.cshtml
@@ -35,3 +35,18 @@
     <i class="glyphicon glyphicon-user">
     </i>
 </a>
+
+
+<a class="btn btn-default" title="Panel de Control" href="~/Establecimiento/ListadoProfesionales">
+    Ir a Listado Profesionales
+    <i class="glyphicon glyphicon-user">
+    </i>
+</a>
+
+<a class="btn btn-default" title="Panel de Control" href="~/Establecimiento/SemanalAtenciones">
+    Ir a Listado Profesionales
+    <i class="glyphicon glyphicon-user"> </i>
+</a>
+
+
+
