--- a/EstablecimientoPanelDeControl/Views/Shared/_Layout.cshtml
+++ b/EstablecimientoPanelDeControl/Views/Shared/_Layout.cshtml
@@ -43,5 +43,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    @if (IsSectionDefined("Styles"))
+    {@RenderSection("Styles", required: false)}
 </body>
 </html>
