--- a/EstablecimientoPanelDeControl/Views/Establecimiento/Panel.cshtml
+++ b/EstablecimientoPanelDeControl/Views/Establecimiento/Panel.cshtml
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="row margin-top-15">
-                    <div class="col-md-2"> <input type="button" class="btn btn-default" style="width:100%" value="Listado de Medicos"></div>
+                    <div class="col-md-2"> @Html.ActionLink("Listado Profesionales","ListaProfesionales")
                     <div class="col-md-1"></div>
                 </div>
 
